<resources>
    <string name="app_name">Old Burying Ground Beaufort NC</string>
    <string name="contactustext">contact us about us text from stringxml</string>
    <string name="about1">The Old Burying Ground grew up around the building used for sessions of the court and for reading the service of the Anglican Church in St. John\'s Parish. The cemetery was deeded to the town of Beaufort in 1731 by Nathaniel Taylor, following the first survey of the town.</string>
    <string name="about2">The northwest corner is the oldest part of the cemetery. The corner looks empty, however a 1992 archaeological survey confirmed that there are many graves in this area. It is probable that some of the unmarked graves contain victims of the Indian wars whose skulls were cleft with tomahawks of hostile Coree and Neusiok Indians. It is recorded that in September, 1711 the area had "been depopulated by the late Indian War and Massacre."</string>
    <string name="about3">The earliest graves were marked with shell, brick, or wooden slabs, because stone markers had to be brought from afar by wooden sailing. Characteristic of this period are vaulted graves bricked over in an attempt to protect them from high water and wild animals.</string>
    <string name="about4">Most of the graves are facing east. The reason is simple. Those buried had wanted to be facing the sun when they arose on "Judgment morn".</string>
    <string name="about5">The old Burying Ground is own by the Town of Beaufort, and is maintained and managed by the Beaufort Historical Association.</string>
   <string name="text1">(1) Captain Josiah Pender (1819,1864) Led a group of fifty men who seized Fort Macon a month before North Carolina seceded from the Union in 1861. An improvised Confederate flag was raised in place of the national colors. Confederate forces held the fort for a year and eleven days until it was retaken by Union General Ambrose E. Burnside in April, 1862.</string>
<string name="text2">(2) Susanna Thomas (1771 1808) Note the stone\'s design. The face and back are flat, the edges straight. The shape of the stone represents a gate (the gateway to heaven). The style was very popular and is quite old. The inscription demonstrated the old use of the letter "f" for "s" in describing Susanna as "consort" (spouse) to a Captain Thomas.</string>
<string name="text3">(3) Josiah B. Davis, M.D. (1831,1901) and son George Davis, M.D. (1874,1937) Practiced medicine in the Apothecary Shop now on the Beaufort Historic Site. Both doctors lived across the street from the Old Burying Ground.</string>
<string name="text4">(4) Vienna Dill (1863,1865) This child died of yellow fever and was buried in a glass top casket. Legend tells us the grave was dug up by vandals and the body was seen to be intact. But when they opened the casket, the body disintegrated.</string>
<string name="text5">(5) Samuel Leffers (1736,1822) Early schoolmaster who, with his wife, Sarah, owned the Leffers Cottage, now on the Historic Site. They also lived in the Hammock House, Beaufort\'s oldest house. Samuel wrote his own epitaph: "Praises on tombstones are but idly spent, A man\'s good name is his best monument."</string>
<string name="text6">(6) Pierre Henry (1812,1887) and Annie Henry (1816,1904) African Americans who were leaders in the education of emancipated slaves and their children at the Washburn Seminary. He was born free during the period of slavery. The school was one of many established in the South by the Congregational Churches of the North following the Civil War. It was adjacent to St. Stephen\'s Congregational Church.</string>
<string name="text7">(7) Reverend Bridges Arendell (1782,1850) One of six Ann Street Methodist ministers buried here. At the time of his death he lived in Morehead City. Because there was no cemetery there, he was brought to the Old Burying Ground for burial.</string>
<string name="text8">(8) Josiah Bell (1767,1843) With his wife, Mary Fisher, Bell lived on Turner Street in the yellow house on the Historic Site. Like his grandfather, Joseph Bell, he was a leader in church and civic affairs.</string>
<string name="text9">(9) Nathan Fouller (1750,1800) His ancestors are believed to have come to America on the Mayflower. He was honored in 1987 by the Daughters of the American Revolution.</string>
<string name="text10">(10) Captain John Sabiston (1800\'s) Died near Charleston, S.C. and was brought home by his crew. People gathered by the wharf at the foot of Turner Street as his body was taken off his ship. They followed as it was taken on a bier through the dark streets of town to the graveyard and lowered into the readied grave by torch light. Because embalming was unknown in Beaufort until the 20th century, it was necessary to perform burials quickly.</string>
<string name="text11">(11) Captain John Hill (1817,1879) Sailed the seas. His son had an inscription cut on his stone that could well apply to others in this seaside graveyard: "The form that fills this silent grave. Once tossed on ocean\'s rolling wave. But in a port securely fast. He\'s dropped his anchor here at last."</string>
<string name="text12">(12)Jechonias Willis (1838,1862) A Beaufort man killed when Fort Macon was taken by the Federals. Beaufort members of the garrison were brought home on a flat and released on parole. The body of Willis was brought at the same time. General Burnside himself stood at the wharf witnessing the joyful reunion between soldiers and families. Then, as the pine box containing the body of Willis was claimed by sorrowing loved ones, sympathetic tears rolled down the general\'s cheeks.</string>
<string name="text13">(13) Captain Matthew Gooding (1830,1863) As the pilot of the blockade runner Nashville, he ably ran the Union blockade of Beaufort Harbor during the first year of the Civil War.</string>
<string name="text14">(14) Sergeant George Johnson (1800\'s) A member of the 35th United States Colored Infantry (U.S..C.I.) Johnson was one of almost 200,000 black soldiers who fought for the Union during the Civil War. He was seriously wounded, but survived the war. Many former slaves were anxious to prove that they deserved freedom and equality by fighting alongside the white soldiers. By the end of the war, almost a quarter of the Union Army was made up of black soldiers.</string>
<string name="text15">(15) Sarah Gibbs (d.1792) and Jacob Shepard (d.1773) Sarah was married to Jacob Shepard, a seaman. Jacob\'s ship went to sea, but never returned. He was presumed to be dead. Later, Sarah married Nathaniel Gibbs and had a child with him. After an absence of several years, the shipwreck Jacob Shepard unexpectedly returned to Beaufort to find his wife married to another man. The two men agreed that Sarah would remain with Gibbs as long as she lived, but must spend eternity at the side of Jacob Shepard.</string>
<string name="text16">(16) A.P. (1756) While 1756 may be the oldest legible date, if not the oldest marker, it is certainly not the oldest grave. Chances are good that it will never be known just which grave is oldest. The earliest records of the cemetery were kept by the established church, the Church of England. During the Revolution, some Anglicans loyal to King George III fled, taking Burying Ground records with them. A.P. is possibly Abigail Parker, child of Reuben and Jane Parker.</string>
<string name="text17">(17) Robt. B. Woolard (1800\'s) A member of the 1st North Carolina Infantry Regiment (Union). Two Regiments of volunteers from eastern North Carolina joined the Union Army. After many of these North Carolina\'s were captured by Confederate forces, it was discovered that 22 of them had previously served in the confederate Army. The 22 were handed by the Confederates as deserters. This had profound impact on the morale of the other members of the two union regiments. Most of them spent the rest of the War in the relative security of Beaufort and Fort Macon.</string>
<string name="text18">(18) Col. William Thomson (1732,1802) The highest ranking officer from Beaufort to serve in the American Revolution lies in a grave marked by a simple stone. Declared "the most influential merchant of hist day," he served the town, country and province in many offices, and was a delegate to the Provincial Congress at Halifax (1776) and to the Constitutional Convention at Hillsborough. (1788)</string>
<string name="text19">(19) British Officer (1700\'s) The grave of an officer in His Majesty\'s Navy who died on board ship in the port of Beaufort. Not wanting to be buried "with his boots off" he was buried standing up in full uniform: "Resting `neath a foreign ground. Here stands a sailor of Mad George\'s crown. Name unknown, and all alone, standing the Rebel\'s Ground."</string>
<string name="text20">(20) Crissie Wright (Common Grave) "Cold as the night the \'Crissie Wright\' went ashore" is still heard around Beaufort. The sailors who froze to death after the wreck of that ship in January, 1886 are buried together in this grave. It is said this tragedy led to the establishment of the Cape Lookout Lifesaving Station in 1887.</string>
<string name="text21">(21) James W. Hunt (1794,1848) Came from Franklin County in the War of 1812 as Surgeon, U.S. Army. He remained, was active in public affairs, and had the unusual distinction of marrying (a second time), making his will and dying on the same day.</string>
<string name="text22">(22) Captain Otway Burns (1775,1850) Historians say he was one of North Carolina\'s greatest naval heroes in the War of 1812. He received Letters of Marque and Reprisal from the United States, which had only small navy. He sailed from Nava Scotia to South America plundering British ships. It is said he captured cargo worth more than $2,000,000 on one trip alone. His tomb is surmounted by a cannon taken from his privateer, Snapdragon. After the war, Captain Burns was a member of the North Carolina Legislature. Later, a grateful state made him light-ship keeper near Portsmouth. He died there and was brought by sharpie to Beaufort for burial. The town of Burnsville, in the mountains of North Carolina, was named for Otway Burns and a statue of him stands in the center of that town\'s square.</string>
<string name="text23">(23) Gabriel Plot (1800\'s) The tragic story of the Gabriel family is told in the inscription on the grave of the young mother who died following childbirth: "Leaves have their time to fall and flowers to wither at the north wind\'s breath and starts to set . but all, thou has all seasons, for thine own, O Death." Her baby soon followed her in death.</string>
<string name="text24">(24) Girl in Barrel of Rum: Here is the grave of a girl buried in a barrel of rum. In the 1700s an English family, including an infant daughter, came to Beaufort. The girl grew up with a desire to see her homeland, and finally persuaded her mother to allow her to make the voyage. Her father promised his wife he would return the girl safely. The girl enjoyed her visit to London, but died on the voyage home. She would have been buried at sea, but her father could not bear to break his promise. He purchased a barrel of rum from the captain, and placed her body in it, and brought it to Beaufort for burial.</string>
<string name="text25">(25) Captain Christian Wulff (1810,1856) An unusual looking stone was sent over from Denmark by a devoted sister to mark the grave of Captain Wulff of the Royal Danish Navy, who had sickened and died of yellow fever in Beaufort in 1856. Ladies of the town had nursed Capt. Wulff to no avail and had corresponded with his sister. She herself was lost when the Austria bringing her from Copenhagen to visit the grave was burned at sea.</string>
</resources>