<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="E-mail the developer of this app."
                android:textColor="#00FF00"
                
                    android:background="@drawable/black"
                
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                

                />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView"
            android:background="#00ffff"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="How to use this app:"
                />
<!-- some images next to the text wouldn't be bad. Maybe TTS-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:text="This application was made as a way to help you around the Old Burying Ground in Beaufort NC. In order to use this app you can pinch and zoom, click the numbers, and click the buttons."
                />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:text="By using the pinch and zoom feature of this app, you can zoom in and out of this map. By clicking any of the numbers,  a dialog box comes up with the text associated for that number."
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="About this location."
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:text="@string/about1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:text="@string/about2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:text="@string/about3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:text="@string/about4"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:text="@string/about5"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="Tour info:"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00ff00"
                android:text="All tours are given by the Beaufort Historic site. Below is their number, location, and website."
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Call"
                    android:id="@+id/call" 
                     android:background="@drawable/black"
                android:textColor="#00FF00"
                
                    />

                
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Website"
                    android:id="@+id/website"
                     android:background="@drawable/black"
                android:textColor="#00FF00"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                     />
            </LinearLayout>
 <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Directions"
                    android:id="@+id/direction" 
                     android:background="@drawable/black"
                android:textColor="#00FF00"
                
                    />
             </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>

